refactor: drop roles endpoint
