# openapi.yaml
@@ -309,6 +309,30 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
+  /auth/claims:
+    get:
+      tags:
+        - Auth
+      operationId: Auth_GetUserClaims
+      responses:
+        '200':
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ClaimDto'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ClaimDto'
+            text/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ClaimDto'
   /auth/telegram/exchange:
     post:
       tags:
@@ -362,30 +386,6 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
-  /auth/roles:
-    get:
-      tags:
-        - Auth
-      operationId: Auth_GetUserRoles
-      responses:
-        '200':
-          description: OK
-          content:
-            text/plain:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/RoleDto'
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/RoleDto'
-            text/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/RoleDto'
   /auth/debug/effective-access:
     get:
       tags:
@@ -1776,21 +1776,22 @@ components:
           type: string
           nullable: true
       additionalProperties: false
+    ClaimDto:
+      type: object
+      properties:
+        type:
+          type: string
+          nullable: true
+        value:
+          type: string
+          nullable: true
+      additionalProperties: false
     ResetPasswordDto:
       required:
         - newPassword
       type: object
       properties:
         newPassword:
-          type: string
-          nullable: true
-      additionalProperties: false
-    RoleDto:
-      required:
-        - name
-      type: object
-      properties:
-        name:
           type: string
           nullable: true
       additionalProperties: false
